tests/ui/missing_paren.stderr
[tests/ui/missing_paren.pea:2:13-2:28] error: expected `(`, found: a byte string literal

error: aborting due to 1 previous error

