tests/ui/missing_paren.pea
fn main() {
    println!b"hello, world!");
}
